--- a/style.css
+++ b/style.css
@@ -21,3 +21,31 @@
     margin-top: 2px;
     margin-bottom: 2px;
 }
+
+.rowblue{
+    background-color: rgb(0, 183, 255);
+}
+
+.cellsmall{
+    width:25%
+}
+
+.cellbig{
+    width:50%
+}
+
+table, th, td{
+    border:none;
+}
+
+th{
+    background-color: rgb(0, 102, 255);
+    text-align: left;
+    color:white;
+}
+
+td{
+    padding-top: 8px;
+    padding-bottom: 8px;
+    text-align: justify;
+}
